# AutoPapers

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  REFERENCES.md  ROADMAP.md  WORKFLOW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.toml
docs/: AMINER_API.md
scripts/: full_pipeline_demo.sh  mvp_demo.sh  release_check.sh  run_all_providers_smoke.sh
src/: paper_fetcher.py
src/api/: __init__.py  aminer_client.py  annas_archive.py  annas_playwright.py  pdf_downloader.py
src/autopapers/: __init__.py  cli.py  config.py  (+4 more)
tests/: conftest.py  test_agents_messages.py  test_aminer_provider_fetch.py  test_aminer_provider_search.py  test_base_agent.py  test_cli_integration_chain.py  test_config_cli.py  test_config_paths.py  test_corpus_input_proposal.py  test_corpus_inspect.py  test_corpus_snapshot.py  test_corpus_snapshot_ids.py  test_crossref_provider.py  test_debate_llm.py  test_debate_stub.py  test_demo_scripts.py  test_doctor_cli.py  test_env_check.py  test_extract_and_save_txt.py  test_flow_cli.py  test_flow_cli_phase5_hint.py  test_local_pdf_provider.py  test_logging_utils.py  test_metadata_pick.py  test_openalex_provider.py  test_package_version.py  test_paper_fetcher_cli.py  test_paper_fetcher_unit.py  test_paper_ref.py  test_papers_aminer_cli.py  test_papers_arxiv_provider.py  test_papers_cli.py  test_papers_fetch_parse_cli.py  test_papers_list_metadata.py  test_papers_storage.py  test_phase1_run_parse.py  test_phase3_experiment_runner.py  test_phase3_phase4_cli.py  test_phase4_submit_cli.py  test_phase5_cli.py  (+20 more)
(+24 files in other folders)
