[project]
name = "autopapers"
version = "0.0.1"
description = "Multi-agent automated research paper workflow (MVP scaffold)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "jsonschema>=4.22.0",
  "requests>=2.32.0",
  "pypdf>=5.1.0",
]

[project.scripts]
autopapers = "autopapers.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "src/api",
  "src/paper_fetcher.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/autopapers/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not network"]
markers = [
  "network: Tests that require external network access",
]

[tool.uv]
package = true

